Доработала блоки по 6 уроку

--- a/css/main.css
+++ b/css/main.css
@@ -261,13 +261,17 @@ p {
 
 /*----------------- BLOCK_BLUE -----------------*/
 .block_blue {
+  padding: 20px 0;
   background-color: #002e5b; }
 
 .block__text {
+  font-family: "Montserrat", sans-serif;
   font-size: 21px;
-  color: #ffffff; }
+  color: #ffffff;
+  margin: 0; }
 
 .btn {
+  padding: 9px 17px;
   color: #002e5b;
   font-weight: 700;
   text-transform: uppercase;
@@ -285,20 +289,24 @@ p {
 
 /*----------------- BLOCK_BG -----------------*/
 .block_bg {
-  background-image: url("../img/night.png"); }
+  background-image: url("../img/night.png");
+  padding: 130px 0 118px; }
 
 .data {
   font-size: 14px;
   text-transform: uppercase;
-  color: #ffffff; }
+  color: #ffffff;
+  letter-spacing: 2.8px; }
   .data span {
     display: block;
+    margin: 0 0 6px 0;
     font-family: "Montserrat", sans-serif;
     font-size: 48px;
-    letter-spacing: 2.8px; }
+    letter-spacing: 9px; }
 
 /*----------------- REVIEW -----------------*/
 .review {
+  padding: 130px 0;
   background-image: url("../img/Background.png");
   color: #ffffff; }
 
@@ -310,3 +318,12 @@ p {
 .review__author {
   font-size: 14px;
   font-weight: 700; }
+
+.review__pic {
+  margin: 0 auto 20px;
+  background-image: url(../img/quotes.svg);
+  -webkit-background-size: cover;
+          background-size: cover;
+  background-repeat: no-repeat;
+  width: 50px;
+  height: 37px; }
