--- a/css/main.css
+++ b/css/main.css
@@ -91,8 +91,17 @@ a:hover {
   width: 31px;
   height: 31px; }
 
-.carousel-item {
-  position: relative; }
+.carousel-item::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: block;
+  background-color: #002e5b;
+  opacity: 0.7;
+  height: 100%; }
 
 .carousel-item-1 {
   width: 100vw;
@@ -102,17 +111,6 @@ a:hover {
   -webkit-background-size: cover;
           background-size: cover;
   padding: 300px 0; }
-  .carousel-item-1::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    display: block;
-    background-color: #002e5b;
-    opacity: 0.6;
-    height: 100%; }
 
 .carousel-item-2 {
   width: 100vw;
@@ -122,17 +120,6 @@ a:hover {
   -webkit-background-size: cover;
           background-size: cover;
   padding: 300px 0; }
-  .carousel-item-2::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    display: block;
-    background-color: #002e5b;
-    opacity: 0.7;
-    height: 100%; }
 
 .carousel-item-3 {
   width: 100vw;
@@ -142,17 +129,6 @@ a:hover {
   -webkit-background-size: cover;
           background-size: cover;
   padding: 300px 0; }
-  .carousel-item-3::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    display: block;
-    background-color: #002e5b;
-    opacity: 0.7;
-    height: 100%; }
 
 .carousel-control {
   position: absolute;
