--- a/css/main.css
+++ b/css/main.css
@@ -352,13 +352,16 @@ p {
 .services__title {
   font-size: 21px;
   font-weight: 700;
-  line-height: 2.3;
   text-transform: uppercase;
   color: #002e5b; }
 
+@media (max-width: 700px) {
+  .row-description {
+    display: inherit; } }
+
 .img-inner {
   position: relative;
-  width: 370px;
+  width: 100%;
   height: 190px;
   overflow: hidden;
   margin-bottom: 16px; }
@@ -366,7 +369,7 @@ p {
     position: absolute;
     top: 50%;
     left: 50%;
-    width: 370px;
+    width: 100%;
     height: 190px;
     -webkit-transform: translate(-50%, -50%);
         -ms-transform: translate(-50%, -50%);
