--- a/sass/main.sass
+++ b/sass/main.sass
@@ -44,8 +44,6 @@ a
 p
   font-family: $segoe-font
 
-
-
 /*----------------- HEADER & BANNER -----------------*/
 
 .header
@@ -71,18 +69,25 @@ p
   .dropdown-toggle_english
       display: none
 
+.logo
+  @media (max-width: 800px)
+    width: 100px
 .navbar
   flex-direction: inherit
   width: 100%
   justify-content: space-between
   padding: 43px 0 0 0
-  &-brand
-    @media (max-width: 400px)
-      width: 140px
+  @media (max-width: 800px)
+    padding: 20px 0 0 0 
   &-toggler-icon
     width: 30px
     height: 30px
     background-image: url("../img/menu.svg")
+    @media (max-width: 800px)
+      width: 20px
+      height: 20px
+    &:focus
+      outline: none
 
 .navbar-nav
   align-items: center
@@ -144,7 +149,7 @@ p
     background-repeat: no-repeat
     background-size: cover
     @media (max-width: 900px)
-      padding: 170px 0
+      padding: 150px 0
   &-item-1
     background-image: url("../img/main-bg1.png")
   &-item-2
@@ -163,7 +168,7 @@ p
     max-width: 1200px
     margin: 0 auto
     @media (max-width: 900px)
-      top: 400px
+      top: 350px
       bottom: 0
       left: 0
       justify-content: center
@@ -255,6 +260,7 @@ p
     padding-top: 85px
     @media (max-width: 900px)
       text-align: center
+      padding-top: 0
     @media (max-width: 550px)
       font-size: 35px
       margin: 0 0 15px 0
@@ -318,6 +324,8 @@ p
 
 .text
   margin-bottom: 45px
+  @media (max-width: 800px)
+    margin-bottom: 25px
 
 .link
   padding-bottom: 4px
