--- a/sass/main.sass
+++ b/sass/main.sass
@@ -125,7 +125,17 @@ p
   span
     display: inline-block
     vertical-align: middle
-    background-image: url("../img/flag.svg")
+    background-image: url("../img/flag_english.svg")
+    width: 31px
+    height: 31px
+
+.dropdown-toggle_russian
+  @media (max-width: 991px)
+    display: none
+  span
+    display: inline-block
+    vertical-align: middle
+    background-image: url("../img/flag_russia.svg")
     width: 31px
     height: 31px
 
@@ -168,6 +178,7 @@ p
     width: 100%
     max-width: 1200px
     margin: 0 auto
+    padding-left: 50px
     @media (max-width: 900px)
       top: 350px
       bottom: 0
@@ -232,7 +243,7 @@ p
 
 .carousel-content
   text-align: right
-  max-width: 566px
+  width: 600px
   padding-right: 224px
   position: relative
   @media (max-width: 900px)
@@ -358,6 +369,7 @@ p
     float: right
     @media (max-width: 1035px)
       float: none
+      margin-bottom: 40px
     &_right
       @media (max-width: 1035px)
         display: none
@@ -762,3 +774,60 @@ p
     cursor: pointer
   &:focus
     outline: none
+
+
+
+
+
+
+
+
+.video__link 
+	position: absolute
+	top: 0
+	left: 0
+	width: 100%
+	height: 100%
+
+.video__media 
+	position: absolute
+	top: 0
+	left: 0
+	width: 100%
+	height: 100%
+	border: none
+
+.video__button 
+	position: absolute
+	top: 50%
+	left: 50%
+	z-index: 1
+	display: none
+	padding: 0
+	width: 68px
+	height: 48px
+	border: none
+	background-color: transparent
+	transform: translate(-50%, -50%)
+	cursor: pointer
+
+.video__button-shape 
+	fill: #212121
+	fill-opacity: 0.8
+
+.video__button-icon 
+	fill: #ffffff
+
+.video__button:focus 
+	outline: none
+
+.video:hover .video__button-shape,
+.video__button:focus .video__button-shape 
+	fill: #ff0000
+	fill-opacity: 1
+
+.video--enabled 
+	cursor: pointer
+
+.video--enabled .video__button 
+	display: block
