--- a/css/main.css
+++ b/css/main.css
@@ -210,7 +210,8 @@ p {
       -webkit-box-pack: center;
       -webkit-justify-content: center;
           -ms-flex-pack: center;
-              justify-content: center; } }
+              justify-content: center;
+      padding-left: 0; } }
   .carousel-control a {
     position: relative;
     margin-top: 100px;
@@ -282,12 +283,12 @@ p {
 
 .carousel-content {
   text-align: right;
-  width: 600px;
+  max-width: 600px;
   padding-right: 224px;
   position: relative; }
   @media (max-width: 900px) {
     .carousel-content {
-      padding-right: 15px;
+      padding-right: 0;
       max-width: 100%;
       text-align: center;
       margin: 0 auto; } }
@@ -518,8 +519,7 @@ p {
 
 @media (max-width: 700px) {
   .row-description {
-    display: inherit;
-    text-align: center !important; } }
+    display: inherit; } }
 
 .img-inner {
   position: relative;
@@ -542,6 +542,65 @@ p {
             transform: translate(-50%, -50%);
     -o-object-fit: cover;
        object-fit: cover; }
+
+.video {
+  position: relative;
+  width: 100%;
+  height: 0;
+  padding-bottom: 56.25%;
+  background-color: #000000; }
+
+.video__link {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%; }
+
+.video__media {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: none; }
+
+.video__button {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  z-index: 1;
+  display: none;
+  padding: 0;
+  width: 68px;
+  height: 48px;
+  border: none;
+  background-color: transparent;
+  -webkit-transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  cursor: pointer; }
+
+.video__button-shape {
+  fill: #212121;
+  fill-opacity: 0.8; }
+
+.video__button-icon {
+  fill: #ffffff; }
+
+.video__button:focus {
+  outline: none; }
+
+.video:hover .video__button-shape,
+.video__button:focus .video__button-shape {
+  fill: #ff0000;
+  fill-opacity: 1; }
+
+.video--enabled {
+  cursor: pointer; }
+
+.video--enabled .video__button {
+  display: block; }
 
 /*----------------- BLOCK_BG -----------------*/
 .block_bg {
@@ -868,55 +927,3 @@ p {
     cursor: pointer; }
   .form-button:focus {
     outline: none; }
-
-.video__link {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%; }
-
-.video__media {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border: none; }
-
-.video__button {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  z-index: 1;
-  display: none;
-  padding: 0;
-  width: 68px;
-  height: 48px;
-  border: none;
-  background-color: transparent;
-  -webkit-transform: translate(-50%, -50%);
-      -ms-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  cursor: pointer; }
-
-.video__button-shape {
-  fill: #212121;
-  fill-opacity: 0.8; }
-
-.video__button-icon {
-  fill: #ffffff; }
-
-.video__button:focus {
-  outline: none; }
-
-.video:hover .video__button-shape,
-.video__button:focus .video__button-shape {
-  fill: #ff0000;
-  fill-opacity: 1; }
-
-.video--enabled {
-  cursor: pointer; }
-
-.video--enabled .video__button {
-  display: block; }
