--- a/sass/main.sass
+++ b/sass/main.sass
@@ -184,6 +184,7 @@ p
       bottom: 0
       left: 0
       justify-content: center
+      padding-left: 0
     a 
       position: relative
       margin-top: 100px
@@ -243,11 +244,11 @@ p
 
 .carousel-content
   text-align: right
-  width: 600px
+  max-width: 600px
   padding-right: 224px
   position: relative
   @media (max-width: 900px)
-    padding-right: 15px
+    padding-right: 0
     max-width: 100%
     text-align: center
     margin: 0 auto
@@ -462,7 +463,6 @@ p
 .row-description
   @media (max-width: 700px)
     display: inherit
-    text-align: center!important
 
 .img-inner
   position: relative
@@ -481,6 +481,64 @@ p
     height: 190px
     transform: translate(-50%, -50%)
     object-fit: cover
+
+.video 
+	position: relative
+	width: 100%
+	height: 0
+	padding-bottom: 56.25%
+	background-color: #000000
+
+.video__link 
+	position: absolute
+	top: 0
+	left: 0
+	width: 100%
+	height: 100%
+
+.video__media 
+	position: absolute
+	top: 0
+	left: 0
+	width: 100%
+	height: 100%
+	border: none
+
+.video__button 
+	position: absolute
+	top: 50%
+	left: 50%
+	z-index: 1
+	display: none
+	padding: 0
+	width: 68px
+	height: 48px
+	border: none
+	background-color: transparent
+	transform: translate(-50%, -50%)
+	cursor: pointer
+
+.video__button-shape 
+	fill: #212121
+	fill-opacity: 0.8
+
+.video__button-icon 
+	fill: #ffffff
+
+.video__button:focus 
+	outline: none
+
+.video:hover .video__button-shape,
+.video__button:focus .video__button-shape 
+	fill: #ff0000
+	fill-opacity: 1
+
+.video--enabled 
+	cursor: pointer
+
+.video--enabled .video__button 
+	display: block
+
 
 
 
@@ -774,60 +832,3 @@ p
     cursor: pointer
   &:focus
     outline: none
-
-
-
-
-
-
-
-
-.video__link 
-	position: absolute
-	top: 0
-	left: 0
-	width: 100%
-	height: 100%
-
-.video__media 
-	position: absolute
-	top: 0
-	left: 0
-	width: 100%
-	height: 100%
-	border: none
-
-.video__button 
-	position: absolute
-	top: 50%
-	left: 50%
-	z-index: 1
-	display: none
-	padding: 0
-	width: 68px
-	height: 48px
-	border: none
-	background-color: transparent
-	transform: translate(-50%, -50%)
-	cursor: pointer
-
-.video__button-shape 
-	fill: #212121
-	fill-opacity: 0.8
-
-.video__button-icon 
-	fill: #ffffff
-
-.video__button:focus 
-	outline: none
-
-.video:hover .video__button-shape,
-.video__button:focus .video__button-shape 
-	fill: #ff0000
-	fill-opacity: 1
-
-.video--enabled 
-	cursor: pointer
-
-.video--enabled .video__button 
-	display: block
