Текст по левому краю для моб и планш версий

--- a/sass/main.sass
+++ b/sass/main.sass
@@ -322,6 +322,8 @@ p
   color: $blue
   line-height: 1
   text-transform: uppercase
+  @media (max-width: 900px)
+    text-align: left
   @media (max-width: 550px)
     font-size: 25px
 
@@ -332,11 +334,15 @@ p
   max-width: 520px
   @media (max-width: 1035px)
     max-width: 100%
+  @media (max-width: 900px)
+    text-align: left
   @media (max-width: 550px)
     font-size: 18px
 
 .text
   margin-bottom: 45px
+  @media (max-width: 900px)
+    text-align: left
   @media (max-width: 800px)
     margin-bottom: 25px
 
@@ -645,6 +651,9 @@ p
 .subtitle_center
   max-width: 529px
   margin: 16px auto 46px
+  @media (max-width: 900px)
+    max-width: 100%
+    text-align: left
 
 .block-addres__title
   margin: 39px 0 20px 40px
