--- a/css/main.css
+++ b/css/main.css
@@ -363,6 +363,9 @@ p {
   color: #002e5b;
   line-height: 1;
   text-transform: uppercase; }
+  @media (max-width: 900px) {
+    .title {
+      text-align: left; } }
   @media (max-width: 550px) {
     .title {
       font-size: 25px; } }
@@ -375,12 +378,18 @@ p {
   @media (max-width: 1035px) {
     .subtitle {
       max-width: 100%; } }
+  @media (max-width: 900px) {
+    .subtitle {
+      text-align: left; } }
   @media (max-width: 550px) {
     .subtitle {
       font-size: 18px; } }
 
 .text {
   margin-bottom: 45px; }
+  @media (max-width: 900px) {
+    .text {
+      text-align: left; } }
   @media (max-width: 800px) {
     .text {
       margin-bottom: 25px; } }
@@ -706,6 +715,10 @@ p {
 .subtitle_center {
   max-width: 529px;
   margin: 16px auto 46px; }
+  @media (max-width: 900px) {
+    .subtitle_center {
+      max-width: 100%;
+      text-align: left; } }
 
 .block-addres__title {
   margin: 39px 0 20px 40px;
